# AnkiQuickTags

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  todo.md
.github/workflows/: release.yml
addon/: __init__.py  config.json  manifest.json  meta.json
addon/src/: addon.py  config.py  helpers.py  tag.py
addon/user_files/: tags.json
addon/user_files__dev/: tags.json
addon/user_files_dev/: tags.json
anki-quick-tags/: __init__.py
ankiquicktags/: config.json  meta.json
ankiquicktags/src/: __init__.py
bundle/: anki-quick-tags.ankiaddon
docs/: publishing-a-release.md
scripts/: bundle.sh  link.sh  precommit.sh  unlink.sh
tests/: conftest.py  test_config.py
