[tool.poetry]
name = "anki-quick-tags"
version = "0.2.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
aqt = "^2.1.44"
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.9.1"

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
