[project]
name = "AnkiQuickTags"
description = "Tag your Anki cards quickly!"
version = "0.3.0"
authors = [{ name = "Shant Ergenian", email = "shaaant@pm.me" }]

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.docformatter]
in-place = true
recursive = true
wrap-summaries = 88
wrap-descriptions = 0
